<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.audreycelia.homeworkapp.EditHomeworkFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_edit_homework_name"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />


        <EditText
            android:id="@+id/et_edit_homework_name"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:textColor="@color/text_color"
            android:backgroundTint="@color/text_color"/>

        <TextView
            android:id="@+id/tv_edit_homework_date"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_edit_homework_name"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/date"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_edit_homework_date"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/et_edit_homework_name"
            android:ems="10"
            android:inputType="date"
            android:textColor="@color/text_color"
            android:backgroundTint="@color/text_color"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>


        <TextView
            android:id="@+id/tv_edit_homework_course"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_edit_homework_date"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/course"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/sp_edit_homework_course"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/et_edit_homework_date"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/et_edit_homework_date"
            android:layout_below="@+id/et_edit_homework_date" />

        <TextView
            android:id="@+id/tv_edit_homework_done"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/done"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp"
            android:layout_below="@+id/tv_edit_homework_course"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <CheckBox
            android:id="@+id/cb_edit_homework_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_edit_homework_done"
            android:layout_alignLeft="@+id/sp_edit_homework_course"
            android:layout_alignStart="@+id/sp_edit_homework_course" />

        <TextView
            android:id="@+id/tv_edit_homework_description"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_edit_homework_course"
            android:layout_marginTop="46dp"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/description"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_edit_homework_description"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_edit_homework_description"
            android:ems="30"
            android:gravity="left|top"
            android:inputType="textMultiLine"
            android:textColor="@color/text_color"
            android:backgroundTint="@color/text_color"/>



        <Button
            android:id="@+id/bt_delete_edit_homework"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@color/colorRed"
            android:text="DELETE"
            android:textColor="@android:color/white"
            android:visibility="invisible"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </RelativeLayout>

</FrameLayout>
